# wk

./: .gitattributes  .gitignore  confusion-vocab.txt  confusion.txt  extra-kanji.yaml  extra-vocabulary.yaml  fetch.py  fetch.sh  flashcards.yaml  item_list.txt  item_list_10.txt  item_list_11.txt  item_list_12.txt  item_list_13.txt  item_list_2.txt  item_list_3.txt  item_list_4.txt  item_list_5.txt  item_list_6.txt  item_list_7.txt  item_list_8.txt  item_list_9.txt  item_list_derp.txt  item_list_ggoe.txt  kana_vocabulary.json  kanji.json  log-fake.txt  log.txt  radical.json  radicals.json  read-english.zsh  read-kana.zsh  retired.yaml  simplify.jq  study_materials.json  test.py  user-info.json  vocabulary.json  wk-api-key.txt
james/: Cargo.toml
james/src/: lib.rs
preproc_jmdict/: Cargo.toml
preproc_jmdict/src/: main.rs
rerere/: .swift-format  Levenshtein.swift  Package.resolved  Package.swift  main.swift
rerere.xcodeproj/: project.pbxproj
rerere.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
rerere/coordinator-test/: coordinator-test.swift
rerere/rerere/: Levenshtein.swift  buffers.swift  main.swift  rerere.swift
rerere/rerere-c/: module.modulemap  rerere-c.h
rerere/rerere-cli/: cli.swift  main.swift
rerere/rerere-gui/: AppKitGridView.swift  ContentView.swift  gui_helpers.swift  kana.swift  rerere_guiApp.swift
rerere/rerere-guiTests/: rerere_guiTests.swift
rerere/rerere-guiUITests/: rerere_guiUITests.swift  rerere_guiUITestsLaunchTests.swift
rerere/rerere.xcodeproj/: project.pbxproj
rerere/rerere/testcase/: test.sh  testcase.swift
(+5 files in other folders)
