[package]
authors = ["comex <comexk@gmail.com>"]
edition = "2018"
name = "preproc_jmdict"
version = "0.1.0"
[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.17", features = [ "serialize" ] }
regex = "1"
lmdb-rkv = "0.14.0"
bincode = "1.3.2"
lz4 = "1.23.2"
